[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motif-learn"
version = "0.1.2"
description = "Zernike feature representation and manifold learning of scanning transmission electron microscopy images"
authors = [{ name = "Jiadong Dan", email = "jiadong.dan@u.nus.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["feature dimension reduction", "manifold learning", "Zernike Polynomials"]
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "numba",
    "scikit-image",
    "scikit-learn",
    "matplotlib",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/jiadongdan/motif-learn"

[tool.setuptools.packages.find]
where = ["."]
include = ["mtflearn*"]
